Added image and table, fixed wording

--- a/index.html
+++ b/index.html
@@ -163,16 +163,13 @@
 
         <div class="row featurette">
           <div class="col-md-5">
-
+            <img src="img/jordan_show.png" class="featurette-image img-responsive img-thumbnail" />
           </div>
           <div class="col-md-7">
-            <h2 id="shows" class="featurette-heading">Live shows. <span class="text-muted">I'll impress you in-person.</span></h2>
-            <p class="lead">No live shows yet, but we'll keep you posted. I promise.</p>
+            <h2 id="shows" class="featurette-heading">Live Shows. <span class="text-muted">I heard you love them.</span></h2>
+            <p class="lead">Look at what's coming up.</p>
             <div class="panel panel-default">
-              <div class="panel-heading">
-                <h3 class="panel-title">Upcoming Shows</h3>
-              </div>
-              <table class="table">
+              <table class="table table-striped">
                 <thead>
                   <tr>
                     <th>When</th>
@@ -195,6 +192,23 @@
                     <td class="show-who">
                       <p>
                         Playing alongside <a href="http://noisytomato.bandcamp.com/" title="Lydia Low">Lydia Low</a> and <a href="https://www.facebook.com/billybennettmusic" title="Billy Bennett">Billy Bennett</a>.
+                      </p>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td class="show-when">
+                      <p>
+                        TBD
+                      </p>
+                    </td>
+                    <td class="show-where">
+                      <p>
+                        TBD
+                      </p>
+                    </td>
+                    <td class="show-who">
+                      <p>
+                        TBD
                       </p>
                     </td>
                   </tr>
