Add Smiling Moose Show

--- a/index.html
+++ b/index.html
@@ -179,39 +179,15 @@
                 </thead>
                 <tbody>
                   <tr>
-                    <td class="show-when">
-                      <p>
-                        January 13th, 2014 @ 8pm
-                      </p>
-                    </td>
-                    <td class="show-where">
-                      <p>
-                        <a href="http://hoochies.localciao.com/" title="Hoochie's Oyster House">Hoochie's Oyster House</a>
-                      </p>
-                    </td>
-                    <td class="show-who">
-                      <p>
-                        Playing alongside <a href="http://noisytomato.bandcamp.com/" title="Lydia Low">Lydia Low</a> and <a href="https://www.facebook.com/billybennettmusic" title="Billy Bennett">Billy Bennett</a>.
-                      </p>
-                    </td>
+                    <td class="show-when"><p>January 13th, 2014 @ 8pm</p></td>
+                    <td class="show-where"><p><a href="http://hoochies.localciao.com/" title="Hoochie's Oyster House">Hoochie's Oyster House</a></p></td>
+                    <td class="show-who"><p>Playing alongside <a href="http://noisytomato.bandcamp.com/" title="Lydia Low">Lydia Low</a> and <a href="https://www.facebook.com/billybennettmusic" title="Billy Bennett">Billy Bennett</a>.</p></td>
                   </tr>
-                  <tr>
-                    <td class="show-when">
-                      <p>
-                        TBD
-                      </p>
-                    </td>
-                    <td class="show-where">
-                      <p>
-                        TBD
-                      </p>
-                    </td>
-                    <td class="show-who">
-                      <p>
-                        TBD
-                      </p>
-                    </td>
-                  </tr>
+                      <tr>
+      <td class="show-when"><p>March 12th, 2014</p></td>
+      <td class="show-where"><p><a href="https://www.google.com/maps/place/Smiling+Moose+Deli/@33.2375922,-97.1451514,11z/data=!4m5!1m2!2m1!1ssmiling+moose+deli,+denton!3m1!1s0x864dca61b4487053:0xf47559d964ffa517">Smiling Moose Deli</a></p></td>
+      <td class="show-who"><p>Show hosted by <a href="http://DentonRadio.com">DentonRadio.com</a></p></td>
+    </tr>
                 </tbody>
               </table>
             </div>
